# book-list

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.agents/skills/git-commit/: SKILL.md
.bru/: generator.js
.bru/book-library-api/: bruno.json  collection.bru
.bru/book-library-api/Anime/: api_v1_anime_anime_id_delete.bru  api_v1_anime_anime_id_get.bru  api_v1_anime_anime_id_put.bru  api_v1_anime_get.bru  api_v1_anime_post.bru  folder.bru
.bru/book-library-api/Books/: api_v1_books__get.bru  api_v1_books__post.bru  api_v1_books_book_id_delete.bru  api_v1_books_book_id_get.bru  api_v1_books_book_id_patch.bru  api_v1_books_status_all_get.bru
.bru/book-library-api/Dashboard/: api_v1_dashboard_stats_get.bru
.bru/book-library-api/Health/: health_get.bru
.bru/book-library-api/ReadingSessions/: api_v1_reading-sessions__get.bru  api_v1_reading-sessions__post.bru  api_v1_reading-sessions_analytics_book_id_get.bru  api_v1_reading-sessions_book_book_id_get.bru  api_v1_reading-sessions_range_get.bru  api_v1_reading-sessions_session_id_delete.bru  api_v1_reading-sessions_session_id_get.bru
.bru/book-library-api/Seasons/: api_v1_anime_anime_id_seasons_get.bru  api_v1_anime_anime_id_seasons_post.bru
.bru/book-library-api/WatchEntries/: api_v1_watch-entries_entry_id_delete.bru  api_v1_watch-entries_entry_id_progress_patch.bru  api_v1_watch-entries_entry_id_status_patch.bru  api_v1_watch-entries_get.bru  api_v1_watch-entries_post.bru
.devcontainer/: devcontainer.json  post_create_commands.py  python.Dockerfile
alembic/: env.py
alembic/versions/: 028c77482e92_auto_migration.py  2211d432885a_auto_migration.py  2f28bcb629b0_.py  5350cf332ceb_autogenerated_migration.py  62f8c8b8446b_auto_migration.py  9b942dcb8538_automigration.py  ba48ac97e5cf_auto_migration.py  d4da9de2f0a9_auto_migration.py
data/: seed_anime.json
docs/issues/opentelemetry-instrumentation/: 01-update-settings.md  02-telemetry-init.md  03-instrumentation-setup.md  04-app-integration.md
sqls/openweather/: mv_current_forecast.sql  mv_today_forecast.sql  vw_current_day_details.sql  vw_weather_metrics.sql
src/: main.py
src/api/: __init__.py  deps.py
src/api/v1/: reading_sessions_routes.py  routes.py
src/api/v1/anime/: __init__.py  anime_routes.py  dashboard_routes.py  deps.py  seasons_routes.py  watch_entries.py
src/api/v1/openweather/: routes.py
src/db/: async_database.py  database.py
src/db/models/: anime.py  base_model.py  books.py  mixins.py  openweather.py
src/repositories/: book_repository.py  reading_session_repository.py
src/repositories/anime/: __init__.py  anime_repository.py  season_repository.py  watch_entry_repository.py
src/repositories/openweather/: current_weather_repository.py  forecast_repository.py
src/schemas/: books.py  openweather.py  reading_session.py
src/schemas/anime/: anime.py  dashboard.py  season.py  watch_entry.py
src/scripts/: seed_anime.py  seed_animes.py  seed_books.py
src/services/: book_service.py  reading_sessions_service.py
src/services/anime/: __init__.py  anime_service.py  season_service.py  watch_entry_service.py
src/services/openweather/: current_weather.py  forecast_service.py
src/static/: index.html
src/utils/: _telemetry.py  config.py  telemetry.py
