[project]
name = "book-list"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.136.3",
    "jinja2>=3.1.6",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-instrumentation-asyncio>=0.63b1",
    "opentelemetry-instrumentation-asyncpg>=0.63b1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-instrumentation-httpx>=0.63b1",
    "opentelemetry-instrumentation-logging>=0.63b1",
    "opentelemetry-instrumentation-psycopg>=0.63b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.63b1",
    "opentelemetry-instrumentation-urllib>=0.63b1",
    "opentelemetry-sdk>=1.42.1",
    "psycopg[binary]>=3.3.4",
]
[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"},
  "poethepoet>=0.46.0",
]
lint = [
    "pylint>=4.0.5",
    "ruff>=0.15.15",
]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[project.scripts]
start = "main:run"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.isort]
line_length = 120

[tool.ruff]
line-length = 120
target-version = "py314"
exclude = ["tests/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pylint.main]
ignore = [".venv", "venv", ".env", "build", "dist", "__pycache__"]

[tool.pylint.messages_control]
max-line-length = 120
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-few-public-methods",
  "duplicate-code",
]

[tool.poe]
verbosity = -1

[tool.poe.tasks.lint]
shell = """
    echo "Running pylint"
    uv run pylint src || true
    echo "Running isort"
    uv run isort src || true
    echo "Running ruff check"
    uv run ruff check src --fix || true
    echo "Running ruff format"
    uv run ruff format src || true
"""

[tool.poe.tasks.migrate]
shell = """
dotenv run alembic check > /dev/null 2>&1 || (
    dotenv run alembic revision --autogenerate -m "auto migration" \
    && dotenv run alembic upgrade head
)
"""

[tool.poe.tasks.pbuild]
shell = """
podman build . -f Dockerfile -t book-list:local
"""

[tool.poe.tasks.prun]
shell = """
podman run -it --env-file .env --rm -p 8001:8001 --network proxy-nw book-list:local
"""
